--- a/fluent-bit.conf
+++ b/fluent-bit.conf
@@ -22,34 +22,20 @@
     Buffer_Chunk_Size 400k
     storage.type      filesystem
     Mem_Buf_Limit     512MB
-    Refresh_interval  5
-
 [INPUT]
     name  tail
-    path  /var/log/fortigate.log
-    tag   fortigate
+    path  /var/ossec/logs/malware_summary.log
+    tag wazuh
     parser  json
     Buffer_Max_Size 5MB
     Buffer_Chunk_Size 400k
     storage.type      filesystem
     Mem_Buf_Limit     512MB
-    Refresh_interval  5
-
 [OUTPUT]
     Name  tcp
-    Host  <Graylog-Server_IP>
+    Host  192.168.1.68
     Port  5555
     net.keepalive off
     Match wazuh
-    Format  json_lines
-    json_date_key true
-
-
-[OUTPUT]
-    Name  udp
-    Host  <Graylog-Server_IP>
-    Port  5140
-    net.keepalive off
-    Match fortigate
     Format  json_lines
     json_date_key true
